--- a/cookieclicker.html
+++ b/cookieclicker.html
@@ -43,12 +43,12 @@
     </main>
 
     <footer id="footer">
-        <p>Lämna gärna feedback!</p>
+        <p>Consider leaving some feedback!</p>
         <div class="mail">
           <img src="https://www.iconpacks.net/icons/1/free-mail-icon-142-thumb.png" alt="Mail ikon" width="50">
           <p>Mail: theo.lindqvist@elev.ga.ntig.se</p>
         </div>
-        <p>© Theo Lindqvist 2022</p>
+        <p>© Theo Lindqvist 2023</p>
     </footer>
 </body>
 </html>
